@@ -48,6 +48,7 @@ public:
             { "channel",        SEC_ADMINISTRATOR,  true,   NULL,                               "", channelCommandTable  },
             { "nameannounce",   SEC_MODERATOR,      true,   &HandleNameAnnounceCommand,         "", NULL },
             { "msg",            SEC_MODERATOR,      true,   &HandleNameAnnounceCommand,         "", NULL },
+            { "adm",            SEC_MODERATOR,      true,   &HandleNameAdminAnnounceCommand,    "", NULL },
             { "gmnameannounce", SEC_MODERATOR,      true,   &HandleGMNameAnnounceCommand,       "", NULL },
             { "announce",       SEC_MODERATOR,      true,   &HandleAnnounceCommand,             "", NULL },
             { "gmannounce",     SEC_MODERATOR,      true,   &HandleGMAnnounceCommand,           "", NULL },
@@ -111,6 +112,19 @@ public:
             name = session->GetPlayer()->GetName();
 
         sWorld->SendWorldText(LANG_ANNOUNCE_COLOR, name.c_str(), args);
+        return true;
+    }
+
+    static bool HandleNameAdminAnnounceCommand(ChatHandler* handler, char const* args)
+    {
+        if (!*args)
+            return false;
+
+        std::string name("Console");
+        if (WorldSession* session = handler->GetSession())
+            name = session->GetPlayer()->GetName();
+
+        sWorld->SendWorldText(LANG_ANNOUNCE_ADMIN_COLOR, name.c_str(), args);
         return true;
     }
 
